--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
-<div class="py-5 border-top">
-  <div class="container">
+<!-- <div class="py-5 border-top">
+  <div class="container-fluid">
 
     <p class="h5 mb-3">{{ site.title | escape }}</p>
 
@@ -24,20 +24,7 @@
           {%- endif -%}
         </ul>
       </div>
-
-
-      <div class="col-sm text-right">
-        <p>{{- site.description | escape -}}</p>
-
-        <p>
-          <a href="https://nicolas-van.github.io/bootstrap-4-github-pages/">Powered by Bootstrap 4 Github Pages</a>
-        </p>
-        <p>
-          <a href="https://github.com/nicolas-van/bootstrap-4-github-pages"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/nicolas-van/bootstrap-4-github-pages?style=social"></a>
-        <p>
-      </div>
-
     </div>
 
   </div>
-</div>
+</div> -->
