--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,23 +1,18 @@
 ---
 layout: default
 ---
-<article>
-
+<article class="container-fluid post">
   <header>
-    <h1>{{ page.title | escape }}</h1>
-    <p class="text-muted">
-      <time datetime="{{ page.date | date_to_xmlschema }}">
-        {%- assign date_format = "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • {{ page.author }}
-      {%- endif -%}
-    </p>
+    <div class="row content">
+      <div class="col">
+        <h1>{{ page.title | escape }}</h1>
+      </div>
+    </div>
   </header>
 
-  <section>
-    {{ content }}
+  <section class="row content">
+    <div class="col">
+      {{ content }}
+    </div>
   </section>
-
 </article>
