--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -330,7 +330,11 @@ legend {
 
 // Custom ==================================================================
 
-$landing-zone-height: 85vh;
+//@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300&display=swap');
+
+
+$landing-zone-height: 95vh;
 $bgColor1: #212121;
 $bgColor2: #020727;
 $fieryColor: #ff5500;
@@ -342,7 +346,10 @@ $sectionColor: $spaceyColor;
 $bgColor: $bgColor2;
 
 
-
+html * {
+  // font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+}
 
 body {
   background-color: $bgColor;
@@ -369,12 +376,12 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -55%);
   z-index: -2;
 }
 
 #landingReel {
-  background-color: $blue;
+  background-color: $bgColor;
 }
 
 .main {
@@ -383,6 +390,8 @@ body {
   left: 0;
   width: 100vw;
   top: $landing-zone-height;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .center {
@@ -392,11 +401,17 @@ body {
 }
 
 .proj-img {
-  width: 85%;
+  width: 340px;
+  
   border-color: #fff;
   border-width: 0px;
   border-style: solid;
-  padding: 0;
+  margin: auto;
+  padding: 0;  
+}
+
+.post {
+  width: 75%;
 }
 
 .section-header {
@@ -431,16 +446,6 @@ body {
   margin: 8px 2px 2px 6px;
 }
 
-.proj-list {
-  width: 90%;
-  margin:  auto;
-}
-
-.bio {
-  width: 90%;
-  margin: auto;
-}
-
 .spacer {
   aspect-ratio: 1280/128;
   width: 100%;
@@ -455,6 +460,25 @@ body {
 
 .invert{
   transform: rotate(180deg);
+}
+
+.proj-entry .proj-title {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.content {
+  width: 90%;
+  margin: auto;
+}
+
+.store-badge {
+  margin: 8px;
+  float: left;
+}
+
+.store-badge > img{
+  height: 48px;
 }
 
 @media screen and (max-aspect-ratio: 3/2) {
