home page update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,7 @@ layout: default
 
       {% include projectSection.html title="Personal Game Projects" projList=site.data.personalGameProjects1 %}
       {% include projectSection.html projList=site.data.personalGameProjects2 %}
+      {% include projectSection.html projList=site.data.personalGameProjects3 %}
 
       {% include projectSection.html title="Machine Learning Projects" projList=site.data.mlProjects %}
 
