more projects & images

--- a/_includes/projectSection.html
+++ b/_includes/projectSection.html
@@ -7,7 +7,7 @@
     <div class="spacer layer1 invert"></div>
 </div>
   {%- endif -%}
-<div class = "row center content">
+<div class = "row content proj-row">
     {% for proj in include.projList %}
         {% include projectEntry.html var=proj %}
     {% endfor %}
