--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,6 +31,9 @@ layout: default
 
       {% include projectSection.html title="Machine Learning Projects" projList=site.data.mlProjects %}
 
+      {% include projectSection.html title="Other Projects" projList=site.data.otherProjects1 %}
+      {% include projectSection.html projList=site.data.otherProjects2 %}
+
       {% include projectSection.html title="Work Experience" projList=site.data.workX %}
     </div>
   </section>
