--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,8 @@ layout: default
     <div class="container-fluid">
       <div class = "row content">
         <div class="col">
-          <h2>About me</h2>
-          <p> Greetings! I'm Saurabh Sood, a gamer, software engineer, game developer and designer from India. I have graduated with a Bachelor's in Technology from PES University and am currently working at Moonfrog Labs, a leading mobile game studio in India.</p>
-
-          <p>I've been gaming ever since I can remember, due to which I've developed a strong passion for science, technology, and art. I love participating in game jams and exploring various aspects of games such as design, gameplay, AI, physics, procedural generation, graphics, and shader programming. Over the past decade, I've created various projects exploring mobile apps, web apps, games, recomendation engines and machine learning.</p>
-
-          <p>Here you will find a collection of some of my work.</p>
-          <p><b>Note:</b> This website is still under development and the content is incomplete!</p>
+          <h2>{{ page.title }}</h2>
+          {{ page.content }}
         </div>
       </div>
     
