--- a/_includes/projectSection.html
+++ b/_includes/projectSection.html
@@ -1,5 +1,5 @@
 {%- if include.title -%}
-<div class = "row center section-header">
+<div class = "row center section-header" id="{{include.title | replace: " ", ""}}">
     <div class="spacer layer1"></div>
     <div class="col">
         <h4 class="">{{include.title}}</h4>
