--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 
   <section class="main">
     <div class="container-fluid">
-      <div class = "row content">
+      <div class = "row content" id="AboutMe">
         <div class="col">
           <h2>{{ page.title }}</h2>
           {{ page.content }}
