--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -349,6 +349,7 @@ $bgColor: $bgColor2;
 html * {
   // font-family: 'Roboto', sans-serif;
   font-family: 'Noto Sans', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -357,9 +358,18 @@ body {
   overflow-x: hidden; /* Hide scrollbars */
 }
 
+.navbar-brand {
+  color: $gray-300;
+  opacity: 1;
+  font-size: 28px;
+}
+
+.navbar-nav {
+  color: #fff;
+}
+
 .bg-navbar {
-  background-color: $black;
-  opacity: 0.5;
+  background-color: #0008;
 }
 
 .video-container {
@@ -400,21 +410,36 @@ body {
   text-align: center;
 }
 
+.proj-title {
+  font-size: 24px;
+  margin: 8px 2px 2px 6px;
+}
+
+.proj-entry .proj-title {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
 .proj-row {
   text-align: center;
   vertical-align: top;
 }
 
-.proj-img {
+.proj-img-holder {
+  align-content: center;
   width: 340px;
-  
   border-color: $gray-700;
   border-width: 2px;
   border-style: solid;
   border-radius: 16px;
-  margin: auto;
-  padding: 0;  
   background-color: $black;
+  padding: 0;  
+  margin: auto;
+}
+
+.proj-img {
+  width: 340px;
+  margin: auto;  
 }
 
 .post {
@@ -448,11 +473,6 @@ body {
   padding-right: 0;
 }
 
-.proj-title {
-  font-size: 24px;
-  margin: 8px 2px 2px 6px;
-}
-
 .spacer {
   aspect-ratio: 1280/128;
   width: 100%;
@@ -469,10 +489,6 @@ body {
   transform: rotate(180deg);
 }
 
-.proj-entry .proj-title {
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
 
 .content {
   width: 80%;
