external page links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,7 @@ layout: default
           {{ page.content }}
         </div>
       </div>
+      {% include links.html title="Professional Projects" %}
     
       {% include projectSection.html title="Professional Projects" projList=site.data.professionalProjects %}
 
