--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,18 @@
 ---
 layout: default
 ---
-<article class="container-fluid post">
-  <header>
-    <div class="row content">
+<article class="container-fluid">
+  <div class="post">
+    <header  class="row content">
       <div class="col">
         <h1>{{ page.title | escape }}</h1>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <section class="row content">
-    <div class="col">
-      {{ content }}
-    </div>
-  </section>
+    <section class="row content">
+      <div class="col">
+        {{ content }}
+      </div>
+    </section>
+  </div>
 </article>
