--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -352,6 +352,10 @@ html * {
   scroll-behavior: smooth;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  margin: 16px 12px 12px 12px;
+}
+
 body {
   background-color: $bgColor;
   width: 100vw;
@@ -478,7 +482,7 @@ body {
   padding: 32px;
   margin: auto;
   margin-top: 64px;
-  background-color: $gray-900;
+  background-color: #090909;
   border-style: solid;
   border-width: 2px;
   border-radius: 6px;
@@ -487,6 +491,28 @@ body {
 
 .post .content {
   width: 90%;
+}
+
+.post-video {
+  width: 100%;
+}
+
+.post img {
+  padding: 4px;  
+}
+
+.yt-video-holder {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.yt-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .section-header {
@@ -550,6 +576,7 @@ body {
 .post .vert-img {
   float: left;
   width: 50%;
+  margin: auto;
 }
 
 @media screen and (max-aspect-ratio: 3/2) {
