--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -495,6 +495,15 @@ body {
 
 .post-video {
   width: 100%;
+  height: auto;
+  margin:auto;
+}
+
+.post-video-sq {
+  width: 70%;
+  height: auto;
+  margin: 0 15% 0 15%;
+  align-self: center;
 }
 
 .post img {
@@ -595,6 +604,12 @@ body {
   .section-header h4 {
     padding-top: 16px;
     padding-bottom: 16px;
+  }
+
+  .post-video-sq {
+    width: 100%;
+    margin: auto;
+    align-self: center;
   }
 }
 @media screen and (min-aspect-ratio: 3/2) {
