--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,3 +20,9 @@
     </div>
   </div>
 </nav>
+
+<div id="loading">
+  <div class="spinner-border text-light" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
