--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
 </nav>
 
 <div id="loading">
-  <div class="loader-17 text-light" role="status">
+  <div class="spinner-border text-light" role="status">
     <span class="sr-only">Loading...</span>
   </div>
 </div>
