--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,12 @@
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/scripts.js" | relative_url }}"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-74Q95GV7RL"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-74Q95GV7RL');
+  </script>
 </head>
