--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -331,10 +331,10 @@ legend {
 // Custom ==================================================================
 
 //@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit&family=Play&family=Quicksand:wght@400;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300&family=Play&display=swap');
 
 
-$landing-zone-height: 95vh;
+$landing-zone-height: 90vh;
 $bgColor1: #212121;
 $bgColor2: #020727;
 $loadingOverlayColor: #03011a;
@@ -342,6 +342,9 @@ $fieryColor: #ff5500;
 $spaceyColor: #8615ff;
 
 $spacerBg: '/assets/media/w_spacey.svg';
+$spacerFooter: '/assets/media/w_spacey_footer.svg';
+$spacerVidBase: '/assets/media/w_spacey_vid_base.svg';
+
 
 $sectionColor: $spaceyColor;
 $bgColor: $bgColor2;
@@ -349,12 +352,13 @@ $bgColor: $bgColor2;
 
 html * {
   // font-family: 'Roboto', sans-serif;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   scroll-behavior: smooth;
 }
 
 h1,h2,h3,h4,h5,h6 {
   margin: 16px 12px 12px 12px;
+  font-family: 'Outfit', sans-serif;
 }
 
 body {
@@ -367,10 +371,16 @@ body {
   color: $gray-300;
   opacity: 1;
   font-size: 28px;
+  font-family: 'Play', sans-serif;
+  
 }
 
-.navbar-nav {
-  color: #fff;
+.nav-link {
+  color: $gray-500 !important;
+}
+
+.nav-link:hover {
+  color: $white !important;
 }
 
 .bg-navbar {
@@ -378,7 +388,7 @@ body {
 }
 
 .video-container {
-  position: absolute;
+  // position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
@@ -391,22 +401,33 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -55%);
+  transform: translate(-50%, -45%);
   z-index: -2;
+  
 }
 
 #landingReel {
-  background-color: $bgColor;
+  background-color: $black;
+  z-index: -10;
 }
 
 .main {
-  position: absolute;
-  top: 0;
-  left: 0;
+  background-color: $bgColor;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
   width: 100vw;
   top: $landing-zone-height;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding-top: 4px;
+  padding-bottom: 32px;
+}
+
+.footer {
+  background-color: $black;
+  // position:absolute;
+  // bottom:0;
+  width:100%;
+  // height:60px;   /* Height of the footer */
 }
 
 .center {
@@ -443,7 +464,7 @@ body {
 .proj-img-holder {
   align-content: center;
   width: 98%; //340px;
-  border-color: $gray-700;
+  border-color: $gray-800;
   border-width: 2px;
   border-style: solid;
   border-radius: 16px;
@@ -455,7 +476,7 @@ body {
 .proj-img {
   width: 100%;
   margin: auto;  
-}
+} 
 
 .page-icon {
   width: 100%;
@@ -495,9 +516,9 @@ body {
 }
 
 .post-video {
-  width: 100%;
+  width: 90%;
   height: auto;
-  margin:auto;
+  margin: 0 5% 0 5%;
 }
 
 .post-video-sq {
@@ -507,16 +528,34 @@ body {
   align-self: center;
 }
 
+.post-video-tall {
+  height: 80vh;
+  width: auto;
+  max-width: 100%;
+  margin: 0 auto;
+  align-self: center;
+}
+
 .post img {
   padding: 4px;
-  width: 100%;
-  margin: auto; 
+  width: 90%;
+  margin: 0 5% 0 5%; 
 }
 
 .post .vert-img {
   float: left;
   width: 50%;
   margin: auto;
+}
+
+.post .vert-sq {
+  width: 50%;
+  margin: 0 25% 0 25%;
+}
+
+.post .img-wide {
+  width: 66%;
+  margin: 0 17% 0 17%;
 }
 
 .yt-video-holder {
@@ -541,8 +580,8 @@ body {
 
 .section-header h4 {
   margin: 0;
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 32px;
+  // font-weight: bold;
 }
 
 .section-header .col {
@@ -566,11 +605,20 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  border-style: none;
 }
 
 .layer1{
   background-image: url($spacerBg);
 }
+.layer2{
+  background-image: url($spacerFooter);
+}
+.layer3{
+  background-image: url($spacerVidBase);
+}
+
+
 
 .invert{
   transform: rotate(180deg);
@@ -596,8 +644,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
   opacity: 1;
@@ -607,6 +655,24 @@ body {
 
 #loading-image {
   z-index: 10001;
+}
+
+#video-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100%;
+  z-index: -90000;
+}
+
+.parallax-video{ 
+
+}
+.parallax-video video{ 
+  min-width: 100%;
+  position: fixed;
+  z-index: -999;
 }
 
 @media screen and (max-aspect-ratio: 3/2) {
@@ -627,11 +693,20 @@ body {
     padding-bottom: 16px;
   }
 
+  .post-video {
+    width: 100%;
+  }
   .post-video-sq {
     width: 100%;
     margin: auto;
     align-self: center;
   }
+
+  .post .vert-sq {
+    width: 100%;
+    margin: auto;
+  }
+  
 }
 @media screen and (min-aspect-ratio: 3/2) {
   .video-container > video {
