--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,7 @@
 
 @import "variables";
 @import "bootstrap/bootstrap";
-@import "syntax-highlighting";
+// @import "syntax-highlighting";
+@import "syntax_dark";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
 @import "bootstrap_customization";
