--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,15 @@
 
-<!-- <div class="py-5 border-top">
-  <div class="container-fluid">
 
-    <p class="h5 mb-3">{{ site.title | escape }}</p>
-
-    <div class="row">
-
+<div class="spacer layer2"></div>
+<div class="py-2 footer">
+  <div class="container-fluid center">
+    <div class="row content">
       <div class="col-sm">
-        <ul class="list-unstyled">
-          <li>
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-          </li>
-          {%- if site.email -%}
-            <li>
-              <a href="mailto:{{ site.email }}">
-                {{ site.email }}
-              </a>
-            </li>
-          {%- endif -%}
-        </ul>
+        <h3 id="contactMe">Contact Me</h3>
+        <p>Please fill out <a href="https://forms.gle/1fHc7fWtpVNDMRTo6">this form</a> if you would like to reach out. I will get back to you as soon as possible.</p>
+        <div class="my-4"><i>Copyright © 2021 By Saurabh Sood.</i></div>
       </div>
     </div>
 
   </div>
-</div> -->
+</div>
