--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto smooth-scroll">
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+      <ul class="navbar-nav ml-1 mr-auto smooth-scroll">
         {%- for hp in page_paths -%}
           {%- if hp.name -%}
           <li class="nav-item">
