--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,15 @@
 
     {%- include header.html -%}
 
-    <div class="py-5">
+    <div class="pt-5">
       <div class="container-fluid page-content">
+        <section>
           {{ content }}
+        </section>
       </div>
     </div>
 
-    {%- include footer.html -%}
+    {%- include footer.html -%}    
 
   </body>
   <script>
