--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
       gtag('config', 'G-74Q95GV7RL');
   </script>
   {%- seo -%}
+  <meta property="og:image:secure" content="{{ "/assets/media/seo-image.png" | absolute_url }}">
+
 </head>
