--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,8 @@ layout: default
 
       {% include projectSection.html title="Machine Learning Projects" projList=site.data.mlProjects %}
 
+      <!-- {% include projectSection.html title="Games From The MEAE Program" projList=site.data.rapidProjects %} -->
+
       {% include projectSection.html title="Personal Game Projects" projList=site.data.personalGameProjects1 %}
       {% include projectSection.html projList=site.data.personalGameProjects2 %}
       {% include projectSection.html projList=site.data.personalGameProjects3 %}
