--- a/_includes/projectSection.html
+++ b/_includes/projectSection.html
@@ -7,6 +7,13 @@
     <div class="spacer layer1 invert"></div>
 </div>
   {%- endif -%}
+  {%- if include.subtitle -%}
+  <div class = "row center">
+    <div class="col">
+        <p class="h5" >{{include.subtitle}}</p>
+    </div>
+  </div>
+  {%- endif -%}
 <div class = "row content proj-row">
     {% for proj in include.projList %}
         {% include projectEntry.html var=proj %}
