--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,15 +26,16 @@ layout: default
       </div>
       {% include links.html title="Professional Projects" %}
 
-      {% include projectSection.html title="Professional Game Projects" projList=site.data.professionalProjects %}
 
-      {% include projectSection.html title="Machine Learning Projects" projList=site.data.mlProjects %}
+      {% include projectSection.html title="Games @MEAE - University of Utah" projList=site.data.rapidProjects %}
 
-      <!-- {% include projectSection.html title="Games From The MEAE Program" projList=site.data.rapidProjects %} -->
+      {% include projectSection.html title="Professional Games @Moonfrog Labs" projList=site.data.professionalProjects %}
 
       {% include projectSection.html title="Personal Game Projects" projList=site.data.personalGameProjects1 %}
       {% include projectSection.html projList=site.data.personalGameProjects2 %}
       {% include projectSection.html projList=site.data.personalGameProjects3 %}
+
+      {% include projectSection.html title="Machine Learning Projects" projList=site.data.mlProjects %}
 
       {% include projectSection.html title="Other Projects" projList=site.data.otherProjects1 %}
       {% include projectSection.html projList=site.data.otherProjects2 %}
