--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       </div>
     </header>
 
-    <section class="row content">
+    <section class="row content proj-content">
       <div class="col">
         {{ content }}
       </div>
