--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -97,55 +97,82 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat" !default;
   }
 
   &-primary {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $primary;
     }
   }
 
   &-secondary {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $secondary;
     }
   }
 
   &-light {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $light;
     }
   }
 
   &-dark {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $dark;
     }
   }
 
   &-success {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $success;
     }
   }
 
   &-info {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $info;
     }
   }
 
   &-danger {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $danger;
     }
   }
 
   &-warning {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $warning;
     }
   }
 
   &-active {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $table-active-bg;
     }
   }
@@ -153,55 +180,82 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat" !default;
   &-hover {
 
     .table-primary:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($primary, 5%);
       }
     }
 
     .table-secondary:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($secondary, 5%);
       }
     }
 
     .table-light:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($light, 5%);
       }
     }
 
     .table-dark:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($dark, 5%);
       }
     }
 
     .table-success:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($success, 5%);
       }
     }
 
     .table-info:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($info, 5%);
       }
     }
 
     .table-danger:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($danger, 5%);
       }
     }
 
     .table-warning:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: darken($warning, 5%);
       }
     }
 
     .table-active:hover {
-      &, > th, > td {
+
+      &,
+      >th,
+      >td {
         background-color: $table-active-bg;
       }
     }
@@ -242,7 +296,12 @@ legend {
 .alert {
   color: $white;
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: inherit;
   }
 
@@ -252,54 +311,79 @@ legend {
   }
 
   &-primary {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $primary;
     }
   }
 
   &-secondary {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $secondary;
     }
   }
 
   &-success {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $success;
     }
   }
 
   &-info {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $info;
     }
   }
 
   &-danger {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $danger;
     }
   }
 
   &-warning {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $warning;
     }
   }
 
   &-dark {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $dark;
     }
   }
 
   &-light {
-    &, > th, > td {
+
+    &,
+    >th,
+    >td {
       background-color: $light;
     }
   }
 
   &-light {
+
     &,
     & a:not(.btn),
     & .alert-link {
@@ -322,7 +406,13 @@ legend {
 
 .card,
 .list-group-item {
-  h1, h2, h3, h4, h5, h6 {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: inherit;
   }
 }
@@ -356,7 +446,12 @@ html * {
   scroll-behavior: smooth;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 16px 12px 12px 12px;
   font-family: 'Outfit', sans-serif;
 }
@@ -364,7 +459,8 @@ h1,h2,h3,h4,h5,h6 {
 body {
   background-color: $bgColor;
   width: 100vw;
-  overflow-x: hidden; /* Hide scrollbars */
+  overflow-x: hidden;
+  /* Hide scrollbars */
   color: $gray-400
 }
 
@@ -373,7 +469,7 @@ body {
   opacity: 1;
   font-size: 28px;
   font-family: 'Play', sans-serif;
-  
+
 }
 
 .nav-link {
@@ -385,7 +481,12 @@ body {
 }
 
 .bg-navbar {
-  background-color: #0008;
+  background-color: #0006;
+  transition: background-color 200ms linear;
+}
+
+.bg-navbar-scrolled {
+  background-color: #000f;
 }
 
 .video-container {
@@ -394,17 +495,17 @@ body {
   left: 0;
   width: 100vw;
   height: $landing-zone-height;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-.video-container > video {
+.video-container>video {
   display: block;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -45%);
   z-index: -2;
-  
+
 }
 
 #landingReel {
@@ -427,7 +528,7 @@ body {
   background-color: $black;
   // position:absolute;
   // bottom:0;
-  width:100%;
+  width: 100%;
   // height:60px;   /* Height of the footer */
 }
 
@@ -438,8 +539,20 @@ body {
 }
 
 .proj-title {
-  font-size: 24px;
-  margin: 8px 2px 2px 6px;
+  font-size: 20px;
+  padding: 2px 2px 2px 2px;
+}
+
+.proj-description {
+  padding: 2px 4px 2px 4px;
+  color: $gray-300;
+  font-size: 12px;
+}
+.proj-tags {
+  padding: 2px 2px 2px 2px;
+  color: $white;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .proj-entry {
@@ -447,11 +560,13 @@ body {
   align-items: center;
   align-content: center;
   margin: auto;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .proj-entry .proj-title {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .proj-row {
@@ -465,19 +580,23 @@ body {
 .proj-img-holder {
   align-content: center;
   width: 98%; //340px;
-  border-color: $gray-800;
-  border-width: 2px;
+  // border-color: $gray-800;
+  border-color: #243db2;
+  border-width: 1px;
   border-style: solid;
-  border-radius: 16px;
+  border-radius: 12px;
   background-color: $black;
-  padding: 0;  
+  padding: 0;
   margin: auto;
 }
 
 .proj-img {
   width: 100%;
-  margin: auto;  
-} 
+  margin: auto;
+}
+.proj-content {
+  text-align: justify;
+}
 
 .page-icon {
   width: 100%;
@@ -540,7 +659,7 @@ body {
 .post img {
   padding: 4px;
   width: 90%;
-  margin: 0 5% 0 5%; 
+  margin: 0 5% 0 5%;
 }
 
 .post .vert-img {
@@ -565,6 +684,7 @@ body {
   height: 0;
   padding-bottom: 56.25%;
 }
+
 .yt-video {
   position: absolute;
   top: 0;
@@ -575,8 +695,8 @@ body {
 
 .section-header {
   // background-color: $sectionColor;
-  padding: 18px 18px 18px 18px;
-  margin: 18px 0 18px 0;
+  padding: 4px 18px 4px 18px;
+  margin: 4px 0 4px 0;
 }
 
 .section-header h4 {
@@ -607,22 +727,31 @@ body {
   background-position: center;
   background-size: cover;
   border-style: none;
+
 }
 
-.layer1{
-  background-image: url($spacerBg);
+.section-title {
+  z-index: 0;
 }
-.layer2{
+
+.layer1 {
+  background-image: url($spacerBg);
+
+}
+
+.layer2 {
   background-image: url($spacerFooter);
 }
-.layer3{
+
+.layer3 {
   background-image: url($spacerVidBase);
 }
 
 
 
-.invert{
+.invert {
   transform: rotate(180deg);
+  // transform: translate(0, 1px);
 }
 
 
@@ -636,8 +765,12 @@ body {
   float: left;
 }
 
-.store-badge > img{
+.store-badge>img {
   height: 52px;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 #loading {
@@ -667,24 +800,24 @@ body {
   z-index: -90000;
 }
 
-.parallax-video{ 
+.parallax-video {}
 
-}
-.parallax-video video{ 
+.parallax-video video {
   min-width: 100%;
   position: fixed;
   z-index: -999;
 }
 
 @media screen and (max-aspect-ratio: 3/2) {
-  .video-container > video {
-      height: 100%;
+  .video-container>video {
+    height: 100%;
   }
 
   .post {
-     width: 100%;
-     padding: 16px 0  16px 0;
+    width: 100%;
+    padding: 16px 0 16px 0;
   }
+
   .content {
     width: 100%;
   }
@@ -697,6 +830,7 @@ body {
   .post-video {
     width: 100%;
   }
+
   .post-video-sq {
     width: 100%;
     margin: auto;
@@ -707,10 +841,22 @@ body {
     width: 100%;
     margin: auto;
   }
+
+  .proj-title {
+    font-size: 28px;
+  }
   
+  .proj-description {
+    font-size: 18px;
+  }
+
+  .proj-tags {
+    font-size: 18px;
+  }
 }
+
 @media screen and (min-aspect-ratio: 3/2) {
-  .video-container > video {
-      width: 100%;
+  .video-container>video {
+    width: 100%;
   }
 }
