--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
-
-
 <div class="spacer layer2"></div>
 <div class="py-2 footer">
   <div class="container-fluid center">
     <div class="row content">
       <div class="col-sm">
         <h3 id="contactMe">Contact Me</h3>
-        <p>Please fill out <a href="https://forms.gle/1fHc7fWtpVNDMRTo6">this form</a> if you would like to reach out. I will get back to you as soon as possible.</p>
-        <div class="my-4"><i>Copyright © 2023 By Saurabh Sood.</i></div>
+        <p>Please fill out <a href="https://forms.gle/1fHc7fWtpVNDMRTo6">this form</a> or send an email to <a
+            href="contact@sood.fyi">contact@sood.fyi</a> if you would like to reach out.</p>
+        <p>I will get back to you as soon as possible.</p>
+        <div class="my-4"><i>Copyright © 2024 By Saurabh Sood.</i></div>
       </div>
     </div>
   </div>
