--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,10 +13,10 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="spacer layer3"></div>
+  <div class="spacer layer3" id="AboutMe"></div>
   <section class="main">
     <div class="container-fluid">
-      <div class="row content" id="AboutMe">
+      <div class="row content" >
         <div class="col">
           <h2>{{ page.title }}</h2>
           <section>
@@ -26,11 +26,11 @@ layout: default
       </div>
       {% include links.html %}
 
-
-      {% include projectSection.html title="Student Games" projList=site.data.studentProjects %}
+      {% include projectSection.html title="Student Games" projList=site.data.studentProjects2 %}
       {% include projectSection.html projList=site.data.rapidProjects %}
 
-      {% include projectSection.html title="Professional Games" projList=site.data.professionalProjects %}
+      {% include projectSection.html title="Professional Games" projList=site.data.gappProjects %}
+      {% include projectSection.html projList=site.data.professionalProjects %}
 
       {% include projectSection.html title="Personal Games" projList=site.data.personalGameProjects1 %}
       {% include projectSection.html projList=site.data.personalGameProjects2 %}
