--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,16 @@ layout: default
 ---
 <article class="container-fluid">
   <div class="post">
-    <header  class="row content">
+    <header class="row content">
       <div class="col">
-        <h1>{{ page.title | escape }}</h1>
+        <h1>
+          {{ page.title | escape }}
+          <br/>
+          <h5 class="font-italic">{{ page.subtitle | escape }}</h5>
+        </h1>
       </div>
     </header>
+
 
     <section class="row content proj-content">
       <div class="col">
